
- fix some problems with playing sounds via BASS: pitch/frequency change and loop/restart should now be matching the 'old' player

- fix swapped red & blue channels when exporting from BMPs

- fix Light Debugger dialog 2nd color button

- improve script editing performance again

- fix crash if sound card(s) hardware/driver setup changed

- see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX

VP 10.7.3 Changelog
------------------------

FIXES:

- fix missing render updates when debugging/changing parameters in pause mode (10.7.0 regression)

- show bulb in UI/viewport

- fix primitive animations getting stuck
- fix primitive animation speed being dependent on the framerate

- fix material list combobox not updating

- fix missing decal UI updates (e.g. width,height)

- fix loading of greyscale/8bit JPEGs (10.7.2 regression)

- fix crash when bumper skirt is not visible

- do not fail to load a table if only the hash/checksum fails, but instead just output a warning

- do not attempt to play "<None>" reel sound (which otherwise polluted the debug outputs)

- update BASS library to 2.4.17

- see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX

VP 10.7.2 Changelog
------------------------

FEATURES:

- add "Assign to Layer" context menu again by showing the first 20 layers.

- expose background and selection color in the script editor preferences

- add disable lighting option for balls (and their trails) to the video preferences (e.g. to help the visually handicapped)

- add 'Go To Definition' to the script editor (via F12 key), which allows to jump to the function/sub/variable definition from the current cursor pos/selection

- add more columns to the search/select dialog (Physics Material, Collection, Collidable, Visible, Timer enabled, Depth Bias, Static Rendering, Reflections enabled)
- fix mem size ordering (culture neutral) and add image format column to the image dialog
